feature/sidebar.scss: "add styles for .navbar"

--- a/frontend-client/src/widgets/sidebar/sidebar.scss
+++ b/frontend-client/src/widgets/sidebar/sidebar.scss
@@ -3,4 +3,9 @@
   background-color: #215656;
 
   margin-top: auto;
+  padding: 12px 11px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
