feature/sidebar: "add styles for navbar__item"

--- a/frontend-client/src/widgets/sidebar/sidebar.scss
+++ b/frontend-client/src/widgets/sidebar/sidebar.scss
@@ -15,5 +15,9 @@
 
     background-color: #e4e4e4;
     border-radius: 50%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
