--- a/frontend-client/src/widgets/header/header.scss
+++ b/frontend-client/src/widgets/header/header.scss
@@ -1,3 +1,53 @@
 .header {
   background-color: #c7c1c1;
+
+  &__nav {
+    &-burger {
+      width: 50px;
+      height: 50px;
+
+      gap: 7px;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+
+      border-radius: 15px;
+      background-color: #fff;
+
+      top: 10px;
+      right: 10px;
+      position: absolute;
+
+      & span {
+        width: 30px;
+        height: 4px;
+
+        border-radius: 5px;
+        background-color: black;
+      }
+    }
+
+    &-menu {
+      gap: 10px;
+      display: flex;
+      flex-direction: column;
+
+      position: absolute;
+
+      &-item {
+        display: flex;
+        align-items: center;
+        gap: 19px;
+
+        & span {
+          width: 30px;
+          height: 30px;
+
+          border-radius: 50%;
+          background-color: #d9d9d9;
+        }
+      }
+    }
+  }
 }
