--- a/frontend-client/src/widgets/header/header.scss
+++ b/frontend-client/src/widgets/header/header.scss
@@ -18,6 +18,7 @@
       top: 10px;
       right: 10px;
       position: absolute;
+      z-index: 5;
 
       & span {
         width: 30px;
@@ -29,21 +30,26 @@
     }
 
     &-menu {
+      width: 100%;
+      height: 100vh;
+      position: absolute;
+
       gap: 10px;
       display: flex;
       flex-direction: column;
-
-      position: absolute;
+      background: rgba(13, 17, 17, 0.9);
 
       &-item {
+        margin-left: 10px;
+
+        gap: 19px;
         display: flex;
         align-items: center;
-        gap: 19px;
+        color: #fff;
 
         & span {
           width: 30px;
           height: 30px;
-
           border-radius: 50%;
           background-color: #d9d9d9;
         }
