--- a/frontend-client/src/widgets/header/header.scss
+++ b/frontend-client/src/widgets/header/header.scss
@@ -2,6 +2,9 @@
   background-color: #c7c1c1;
 
   &__nav {
+    &--active {
+      transform: translateX(-100%);
+    }
     &-burger {
       width: 50px;
       height: 50px;
@@ -32,7 +35,9 @@
     &-menu {
       width: 100%;
       height: 100vh;
+
       position: absolute;
+      transform: translateX(100%);
 
       gap: 10px;
       display: flex;
