--- a/frontend-client/src/widgets/header/header.scss
+++ b/frontend-client/src/widgets/header/header.scss
@@ -2,9 +2,6 @@
   background-color: #c7c1c1;
 
   &__nav {
-    &--active {
-      transform: translateX(-100%);
-    }
     &-burger {
       width: 50px;
       height: 50px;
@@ -23,6 +20,9 @@
       position: absolute;
       z-index: 5;
 
+      &--active {
+      }
+
       & span {
         width: 30px;
         height: 4px;
@@ -37,12 +37,38 @@
       height: 100vh;
 
       position: absolute;
-      transform: translateX(100%);
 
       gap: 10px;
       display: flex;
       flex-direction: column;
       background: rgba(13, 17, 17, 0.9);
+
+      animation-name: menu-close;
+      animation-duration: 0.6s;
+      animation-fill-mode: forwards;
+
+      &--active {
+        animation-name: menu-open;
+        animation-duration: 0.6s;
+        animation-fill-mode: forwards;
+      }
+
+      @keyframes menu-open {
+        from {
+          transform: translateX(100%);
+        }
+        to {
+          transform: translateX(0%);
+        }
+      }
+      @keyframes menu-close {
+        from {
+          transform: translateX(0%);
+        }
+        to {
+          transform: translateX(100%);
+        }
+      }
 
       &-item {
         margin-left: 10px;
