feature/home: "work on syles in home.scss"

--- a/frontend-client/src/index.scss
+++ b/frontend-client/src/index.scss
@@ -54,6 +54,8 @@ code {
 }
 
 #root {
+  position: relative;
+  overflow: hidden;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
