--- a/frontend-client/src/pages/home/home.scss
+++ b/frontend-client/src/pages/home/home.scss
@@ -1,10 +1,21 @@
 .home {
-  & img {
+  &__photo {
+    background-image: url(../../assets/img/home-img/home-img.jpg);
     width: 100%;
     height: 100vh;
+
+    background-size: contain;
+    background-repeat: no-repeat;
+
     position: absolute;
     z-index: -5;
   }
+  //   & img {
+  //     width: 100%;
+  //     height: 100vh;
+  //     position: absolute;
+  //     z-index: -5;
+  //   }
   &__content {
     width: 100%;
     position: absolute;
