feature/index.scss: "change height"

--- a/frontend-client/src/index.scss
+++ b/frontend-client/src/index.scss
@@ -56,7 +56,7 @@ code {
 #root {
   position: relative;
   overflow: hidden;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
