--- a/frontend-client/src/widgets/sidebar/sidebar.scss
+++ b/frontend-client/src/widgets/sidebar/sidebar.scss
@@ -9,6 +9,14 @@
   align-items: center;
   justify-content: space-between;
 
+  @media (min-width: 685px) {
+    margin: 0;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 80px;
+    height: 100vh;
+  }
+
   &__item {
     width: 57px;
     height: 55px;
