--- a/frontend-client/src/widgets/header/header.scss
+++ b/frontend-client/src/widgets/header/header.scss
@@ -49,6 +49,9 @@
       animation-fill-mode: forwards;
 
       &--active {
+        width: 100%;
+        height: 100vh;
+        background: rgba(13, 17, 17, 0.8);
         animation-name: menu-open;
         animation-duration: 0.6s;
         animation-fill-mode: forwards;
