feature/index.scss: "delete style #root"

--- a/frontend-client/src/assets/styles/nullstyles.scss
+++ b/frontend-client/src/assets/styles/nullstyles.scss
@@ -36,5 +36,5 @@ body {
   width: 100%;
   line-height: 1;
 
-  font-family: 'Montserrat', sans-serif;
+  //   font-family: 'Montserrat', sans-serif;
 }
