--- a/frontend-client/src/index.scss
+++ b/frontend-client/src/index.scss
@@ -6,20 +6,9 @@
 //   -webkit-font-smoothing: antialiased;
 //   -moz-osx-font-smoothing: grayscale;
 // }
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-#root {
-  position: relative;
-  overflow: hidden;
-  height: 100vh;
-  z-index: 1;
-  display: flex;
-  flex-direction: column;
-
-  background: linear-gradient(#175151, #000);
 }
