feature/styles: "fix @import"

--- a/frontend-client/src/assets/styles/main.scss
+++ b/frontend-client/src/assets/styles/main.scss
@@ -1,5 +1,5 @@
-@import url('./fonts.scss');
-@import url('./mixins.scss');
-@import url('./nullstyles.scss');
-@import url('./shared.scss');
-@import url('./variables.scss');
+@import './fonts.scss';
+@import './mixins.scss';
+@import './nullstyles.scss';
+@import './shared.scss';
+@import './variables.scss';
