--- a/frontend-client/src/assets/styles/fonts.scss
+++ b/frontend-client/src/assets/styles/fonts.scss
@@ -1,4 +1,3 @@
-@use 'sass:map';
-@use 'sass:string';
-@use 'variables.scss';
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+// @use 'sass:map';
+// @use 'sass:string';
+// @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
