--- a/frontend-client/src/assets/styles/mixins.scss
+++ b/frontend-client/src/assets/styles/mixins.scss
@@ -1,4 +1,5 @@
-@mixin title {
-  font-size: 24px;
-  font-family: 'Montserrat', sans-serif;
+@mixin mobile($mw) {
+  @media (max-width: $mw) {
+    @content;
+  }
 }
