--- a/frontend-client/src/widgets/header/header.scss
+++ b/frontend-client/src/widgets/header/header.scss
@@ -20,6 +20,33 @@
       position: absolute;
       z-index: 5;
 
+      &--active {
+        width: 50px;
+        height: 50px;
+
+        gap: 7px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+
+        border-radius: 15px;
+        background-color: #fff;
+
+        top: 10px;
+        right: 10px;
+        position: absolute;
+        z-index: 5;
+
+        & span {
+          width: 30px;
+          height: 4px;
+
+          border-radius: 5px;
+          background-color: black;
+        }
+      }
+
       & span {
         width: 30px;
         height: 4px;
@@ -39,6 +66,8 @@
       gap: 10px;
       display: flex;
       flex-direction: column;
+      justify-content: space-around;
+
       background: rgba(13, 17, 17, 0.8);
 
       animation-name: menu-close;
@@ -48,7 +77,16 @@
       &--active {
         width: 100%;
         height: 100vh;
+
+        position: absolute;
+        z-index: 4;
+
+        gap: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
         background: rgba(13, 17, 17, 0.8);
+
         animation-name: menu-open;
         animation-duration: 0.6s;
         animation-fill-mode: forwards;
