--- a/frontend-client/src/pages/friends/friends.scss
+++ b/frontend-client/src/pages/friends/friends.scss
@@ -1,8 +1,4 @@
-@import '../../assets/styles/main.scss';
+// @import '../../assets/styles/style.scss';
 
 .friends {
-  // @include title;
-
-  font-family: $main-font;
-  font-size: $fz;
 }
