--- a/frontend-client/src/index.scss
+++ b/frontend-client/src/index.scss
@@ -1,3 +1,5 @@
+@use './assets/styles/style.scss';
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
