--- a/frontend-client/src/index.scss
+++ b/frontend-client/src/index.scss
@@ -1,4 +1,4 @@
-@use './assets/styles/style.scss';
+@import './assets/styles/style.scss';
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -16,4 +16,8 @@ code {
   display: flex;
   flex-direction: column;
   height: 100vh;
+
+  @include mobile(960px) {
+    flex-direction: row;
+  }
 }
