--- a/frontend-client/src/pages/home/home.scss
+++ b/frontend-client/src/pages/home/home.scss
@@ -1,2 +1,47 @@
 .home {
+  width: 100%;
+
+  &__content {
+    display: flex;
+    justify-content: center;
+
+    &-card {
+      width: 375px;
+      height: 100vh;
+      transform-style: preserve-3d;
+
+      &-front {
+        backface-visibility: hidden;
+
+        & img {
+          width: 100%;
+          height: 100vh;
+        }
+
+        &-info {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          gap: 5px;
+
+          position: absolute;
+          bottom: 0;
+
+          & span {
+            height: 50px;
+            background: linear-gradient(to left, #175151, #000);
+            border: 1px solid #505050;
+            border-radius: 20px;
+
+            display: flex;
+            align-items: center;
+            padding-left: 15px;
+
+            color: #fff;
+            letter-spacing: 1px;
+          }
+        }
+      }
+    }
+  }
 }
