--- a/frontend-client/src/widgets/sidebar/sidebar.scss
+++ b/frontend-client/src/widgets/sidebar/sidebar.scss
@@ -10,10 +10,10 @@
   justify-content: space-between;
 
   @media (min-width: 685px) {
-    margin: 0;
+    // margin: 0;
     flex-direction: column;
-    align-items: flex-start;
-    width: 80px;
+    // align-items: flex-start;
+    // width: 80px;
     height: 100vh;
   }
 
