--- a/frontend-client/src/pages/home/home.scss
+++ b/frontend-client/src/pages/home/home.scss
@@ -11,16 +11,25 @@
       transform-style: preserve-3d;
 
       animation-name: active;
-      animation-duration: 1s;
+      animation-duration: 3s;
       animation-iteration-count: infinite;
+      //   animation-fill-mode: forwards;
 
       @keyframes active {
         from {
-          transform: translateY(180deg);
+          transform: rotateY(0deg);
         }
         to {
-          transform: translateY(0deg);
+          transform: rotateY(180deg);
         }
+      }
+
+      &-front,
+      &-back {
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        left: 0;
       }
 
       &-front {
@@ -58,6 +67,10 @@
 
       &-back {
         backface-visibility: hidden;
+        background-color: #fff;
+        width: 100%;
+        height: 100vh;
+        transform: rotateY(180deg);
       }
     }
   }
