adding toggleCard functional

--- a/frontend-client/src/pages/home/home.scss
+++ b/frontend-client/src/pages/home/home.scss
@@ -10,9 +10,9 @@
       height: 100vh;
       transform-style: preserve-3d;
 
-      //   animation-name: active;
-      //   animation-duration: 3s;
-      //   animation-iteration-count: infinite;
+        animation-name: active;
+        animation-duration: 3s;
+        // animation-iteration-count: infinite;
 
       @keyframes active {
         from {
