--- a/frontend-client/src/pages/home/home.scss
+++ b/frontend-client/src/pages/home/home.scss
@@ -1,3 +1,5 @@
+@import '../../assets/styles/style.scss';
+
 .home {
   width: 100%;
 
@@ -62,18 +64,20 @@
 
         &-info {
           width: 100%;
+
+          gap: 5px;
           display: flex;
           flex-direction: column;
-          gap: 5px;
 
           position: absolute;
           bottom: 0;
 
           & span {
             height: 50px;
-            background: linear-gradient(to left, #175151, #000);
-            border: 1px solid #505050;
+
             border-radius: 20px;
+            border: 1px solid #505050;
+            background: linear-gradient(to left, #175151, #000);
 
             display: flex;
             align-items: center;
@@ -86,13 +90,68 @@
       }
 
       &-back {
-        backface-visibility: hidden;
         width: 100%;
         transform: rotateY(180deg);
+        backface-visibility: hidden;
+        overflow-y: scroll;
 
         & img {
           width: 100%;
           height: 100vh;
+        }
+
+        &-exit {
+          width: 50px;
+          height: 50px;
+          background-image: url('../../assets/icons/sidebar-icons/house-icon.svg');
+          background-repeat: no-repeat;
+          background-position: center;
+
+          position: absolute;
+          border-radius: 10px;
+          top: 10px;
+          right: 15px;
+        }
+
+        &-profile {
+          width: 100%;
+          padding: 0px 10px;
+
+          position: absolute;
+          top: 60px;
+
+          gap: 15px;
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+
+          &-item {
+            width: 100%;
+
+            gap: 10px;
+            display: flex;
+            flex-direction: column;
+
+            &-title {
+              color: #fff;
+            }
+
+            &-info {
+              width: 100%;
+              height: 40px;
+
+              border-radius: 7px;
+              background-color: #f1f1f1;
+            }
+          }
+
+          &-button {
+            width: 170px;
+            height: 50px;
+
+            border-radius: 7px;
+            margin-top: 20px;
+          }
         }
       }
     }
