feature: change in files

--- a/frontend-client/src/pages/home/home.scss
+++ b/frontend-client/src/pages/home/home.scss
@@ -10,6 +10,7 @@
     &-card {
       width: 375px;
       height: 100vh;
+      font-family: $main-font;
 
       animation-name: close;
       animation-duration: 1s;
