--- a/frontend-client/src/assets/styles/fonts.scss
+++ b/frontend-client/src/assets/styles/fonts.scss
@@ -1,3 +1,3 @@
 @use 'sass:map';
 @use 'sass:string';
-// @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500;1,600;1,700&display=swap');
