--- a/frontend-client/src/widgets/sidebar/sidebar.scss
+++ b/frontend-client/src/widgets/sidebar/sidebar.scss
@@ -2,7 +2,7 @@
 
 .navbar {
   height: 100vh;
-  background-color: #215656;
+  background-color: map-get($color-change, 'polite');
 
   margin-top: auto;
   padding: 12px 11px;
@@ -11,17 +11,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-
-  // @include mobile(685px) {
-  //   flex-direction: row;
-  //   height: 80px;
-  // }
-
-  // @media (min-width: 685px) {
-  //   flex-direction: column;
-
-  //   height: 100vh;
-  // }
 
   &__item {
     width: 57px;
