--- a/frontend-client/src/widgets/header/header.scss
+++ b/frontend-client/src/widgets/header/header.scss
@@ -62,6 +62,7 @@
     &-menu {
       width: 100%;
       height: 100vh;
+      padding-top: 10px;
 
       position: absolute;
       z-index: 4;
@@ -80,8 +81,10 @@
       &--active {
         width: 100%;
         height: 100vh;
+        padding-top: 10px;
 
         position: absolute;
+
         z-index: 4;
 
         gap: 25px;
@@ -114,18 +117,17 @@
       }
 
       &-item {
-        margin-left: 10px;
+        margin-left: 12px;
 
         gap: 19px;
         display: flex;
         align-items: center;
         @include font(16px, 700, $white);
 
-        & span {
-          width: 30px;
-          height: 30px;
-          border-radius: 50%;
-          background-color: #d9d9d9;
+        &-profile {
+          background-image: url('../../assets/icons/header-icons/profile-icon.svg');
+          width: 18px;
+          height: 21px;
         }
       }
     }
