--- a/frontend-client/src/index.scss
+++ b/frontend-client/src/index.scss
@@ -1,4 +1,4 @@
-@import './assets/styles/style.scss';
+@use './assets/styles/style.scss' as *;
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
