--- a/frontend-client/src/pages/home/home.scss
+++ b/frontend-client/src/pages/home/home.scss
@@ -93,11 +93,12 @@
         width: 100%;
         transform: rotateY(180deg);
         backface-visibility: hidden;
+        position: relative;
         overflow-y: scroll;
 
         & img {
           width: 100%;
-          height: 100vh;
+          // height: 100vh;
         }
 
         &-exit {
@@ -108,49 +109,36 @@
           background-position: center;
 
           position: absolute;
+          z-index: 1;
           border-radius: 10px;
           top: 10px;
           right: 15px;
         }
 
-        &-profile {
+        &-about {
           width: 100%;
-          padding: 0px 10px;
+          height: 100%;
 
           position: absolute;
-          top: 60px;
 
-          gap: 15px;
+          gap: 11px;
           display: flex;
-          align-items: center;
           flex-direction: column;
 
-          &-item {
-            width: 100%;
+          color: $white;
+          background-color: rgba($ruined-smores, 0.6);
 
-            gap: 10px;
-            display: flex;
-            flex-direction: column;
-
-            &-title {
-              color: #fff;
-            }
-
-            &-info {
-              width: 100%;
-              height: 40px;
-
-              border-radius: 7px;
-              background-color: #f1f1f1;
-            }
+          &-title {
+            margin-top: 25px;
+            text-align: center;
+            @include font(24px, 600, $white);
+            line-height: 20px;
+            letter-spacing: 0.7px;
           }
 
-          &-button {
-            width: 170px;
-            height: 50px;
-
-            border-radius: 7px;
-            margin-top: 20px;
+          &-info {
+            @include flex('column');
+            gap: 10px;
           }
         }
       }
