--- a/frontend-client/src/pages/home/home.scss
+++ b/frontend-client/src/pages/home/home.scss
@@ -93,12 +93,10 @@
         width: 100%;
         transform: rotateY(180deg);
         backface-visibility: hidden;
-        position: relative;
-        overflow-y: scroll;
 
         & img {
           width: 100%;
-          // height: 100vh;
+          height: 100vh;
         }
 
         &-exit {
@@ -109,10 +107,11 @@
           background-position: center;
 
           position: absolute;
-          z-index: 1;
-          border-radius: 10px;
-          top: 10px;
           right: 15px;
+          top: 10px;
+          z-index: 1;
+
+          border-radius: 10px;
         }
 
         &-about {
@@ -124,21 +123,33 @@
           gap: 11px;
           display: flex;
           flex-direction: column;
+          padding: 0px 20px;
 
-          color: $white;
           background-color: rgba($ruined-smores, 0.6);
 
           &-title {
             margin-top: 25px;
-            text-align: center;
+
             @include font(24px, 600, $white);
-            line-height: 20px;
             letter-spacing: 0.7px;
+            text-align: center;
+            line-height: 20px;
           }
 
           &-info {
-            @include flex('column');
             gap: 10px;
+            overflow-y: auto;
+            @include flex('column');
+
+            &-item {
+              @include font(16px, 400, $white);
+              @include flex('column');
+
+              letter-spacing: 0.7px;
+              line-height: 20px;
+
+              gap: 5px;
+            }
           }
         }
       }
